# genmc

./: -.s  .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  LLVMLICENSE  Makefile.am  Makefile.am.coverage  README.md  configure.ac
doc/: Doxyfile  development.md  manual.html  manual.md
include/: Makefile.am  assert.h  atomic  cassert  cstdio  cstdlib  errno.h  fcntl.h  genmc.h  genmc_internal.h  lkmm.h  pthread.h  stdatomic.h  stddef.h  stdio.h  stdlib.h  thread  threads.h  unistd.h
include/bits/: stat.h
include/sys/: stat.h  types.h
m4/: ax_clang.m4  ax_cxx_compile_stdcxx.m4  ax_git_commit.m4  ax_llvm.m4  gcov.m4
scripts/: bound-driver.sh  driver.sh  fast-driver.sh  randomize-driver.sh  run-relinche-impl.sh  run-relinche-spec.sh  runcorrect.sh  runwrong.sh  terminal.sh
src/: .gitignore  ARCalculator.cpp  ARCalculator.hpp  ARCalculatorLKMM.cpp  ARCalculatorLKMM.hpp  ASize.cpp  ASize.hpp  AdjList.hpp  AdjList.tcc  BisimilarityCheckerPass.cpp  BisimilarityCheckerPass.hpp  Bitmask.hpp  BoundDecider.cpp  BoundDecider.hpp  Calculator.hpp  CallInfoCollectionPass.cpp  CallInfoCollectionPass.hpp  CallInstWrapper.hpp  CodeCondenserPass.cpp  CodeCondenserPass.hpp  CoherenceCalculator.hpp  Config.cpp  Config.hpp  ConfirmationAnnotationPass.cpp  ConfirmationAnnotationPass.hpp  ContextBoundDecider.cpp  ContextBoundDecider.hpp  DeclareAssumePass.cpp  DeclareAssumePass.hpp  DeclareEndLoopPass.cpp  DeclareEndLoopPass.hpp  DeclareInternalsPass.cpp  DeclareInternalsPass.hpp  DefineLibcFunsPass.cpp  DefineLibcFunsPass.hpp  DepExecutionGraph.cpp  DepExecutionGraph.hpp  DepInfo.cpp  DepInfo.hpp  DepTracker.hpp  (+174 more)
src/ADT/: AdjList.hpp  AdjList.tcc  Bitmask.hpp  DepView.cpp  DepView.hpp  Matrix2D.hpp  Matrix2D.tcc  Trie.hpp  VSet.hpp  VSet.tcc  VectorClock.cpp  VectorClock.hpp  View.cpp  View.hpp  value_ptr.hpp
src/Config/: Config.cpp  Config.hpp  MemoryModel.hpp  Verbosity.cpp  Verbosity.hpp
src/ExecutionGraph/: DepExecutionGraph.cpp  DepExecutionGraph.hpp  DepInfo.cpp  DepInfo.hpp  Event.hpp  EventAttr.hpp  EventLabel.cpp  EventLabel.def  EventLabel.hpp  ExecutionGraph.cpp  ExecutionGraph.hpp  GraphIterators.hpp  GraphUtils.cpp  GraphUtils.hpp  LabelVisitor.hpp  MaximalIterator.hpp  Stamp.cpp  Stamp.hpp
src/ExecutionGraph/Consistency/: BoundDecider.cpp  BoundDecider.hpp  ConsistencyChecker.cpp  ConsistencyChecker.hpp  ContextBoundDecider.cpp  ContextBoundDecider.hpp  IMMChecker.cpp  IMMChecker.hpp  RAChecker.cpp  RAChecker.hpp  RC11Checker.cpp  RC11Checker.hpp  RoundBoundDecider.cpp  RoundBoundDecider.hpp  SCChecker.cpp  SCChecker.hpp  SymmetryChecker.cpp  SymmetryChecker.hpp  TSOChecker.cpp  TSOChecker.hpp
src/Runtime/: DepTracker.hpp  Execution.cpp  ExternalFunctions.cpp  InternalFunction.def  Interpreter.cpp  Interpreter.h  InterpreterEnumAPI.cpp  InterpreterEnumAPI.hpp
src/Static/: LLVMModule.cpp  LLVMModule.hpp  LLVMUtils.cpp  LLVMUtils.hpp  ModuleID.hpp  ModuleInfo.cpp  ModuleInfo.hpp
src/Static/Transforms/: BisimilarityCheckerPass.cpp  BisimilarityCheckerPass.hpp  CallInfoCollectionPass.cpp  CallInfoCollectionPass.hpp  CodeCondenserPass.cpp  CodeCondenserPass.hpp  ConfirmationAnnotationPass.cpp  ConfirmationAnnotationPass.hpp  DeclareInternalsPass.cpp  DeclareInternalsPass.hpp  DefineLibcFunsPass.cpp  DefineLibcFunsPass.hpp  EliminateAnnotationsPass.cpp  EliminateAnnotationsPass.hpp  EliminateCASPHIsPass.cpp  EliminateCASPHIsPass.hpp  EliminateCastsPass.cpp  EliminateCastsPass.hpp  EliminateRedundantInstPass.cpp  EliminateRedundantInstPass.hpp  EliminateUnusedCodePass.cpp  EliminateUnusedCodePass.hpp  EscapeCheckerPass.cpp  EscapeCheckerPass.hpp  FunctionInlinerPass.cpp  FunctionInlinerPass.hpp  InstAnnotator.cpp  InstAnnotator.hpp  IntrinsicLoweringPass.cpp  IntrinsicLoweringPass.hpp  LoadAnnotationPass.cpp  LoadAnnotationPass.hpp  LocalSimplifyCFGPass.cpp  LocalSimplifyCFGPass.hpp  LoopJumpThreadingPass.cpp  LoopJumpThreadingPass.hpp  LoopUnrollPass.cpp  LoopUnrollPass.hpp  MDataCollectionPass.cpp  MDataCollectionPass.hpp  (+8 more)
src/Support/: ASize.hpp  DotPrint.hpp  Error.hpp  Hash.hpp  Logger.hpp  MemAccess.hpp  MemOrdering.cpp  MemOrdering.hpp  NameInfo.cpp  NameInfo.hpp  Parser.hpp  RMWOps.hpp  SAddr.cpp  SAddr.hpp  SAddrAllocator.cpp  SAddrAllocator.hpp  SExpr.hpp  SExprVisitor.hpp  SExprVisitor.tcc  SVal.cpp  SVal.hpp  ThreadInfo.hpp  ThreadPinner.cpp  ThreadPinner.hpp  ThreadPool.cpp  ThreadPool.hpp
src/Verification/: ChoiceMap.cpp  ChoiceMap.hpp  DriverFactory.hpp  DriverHandlerDispatcher.hpp  GenMCDriver.cpp  GenMCDriver.hpp  Revisit.cpp  Revisit.hpp  VerificationError.cpp  VerificationError.hpp  WorkList.cpp  WorkList.hpp  WorkSet.cpp  WorkSet.hpp
src/Verification/Consistency/: BoundDecider.cpp  ContextBoundDecider.cpp  IMMDriver.cpp  IMMDriver.hpp  RADriver.cpp  RADriver.hpp  RC11Driver.cpp  RC11Driver.hpp  SCDriver.cpp  SCDriver.hpp  TSODriver.cpp  TSODriver.hpp
src/Verification/Relinche/: LinearizabilityChecker.cpp  LinearizabilityChecker.hpp  Linearization.cpp  Linearization.hpp  Observation.cpp  Observation.hpp  Specification.cpp  Specification.hpp
tests/: threads.h
tests/cooking/: m5.c
tests/cooking/MCR1/: mcr1.c
tests/cooking/MCR2/: mcr2.c  rcmc.in
tests/cooking/MCR2-acqrel/: mcr2acqrel.c
tests/cooking/MCR2-rlx/: mcr2rlx.c
tests/cooking/apr_1/: apr_1.c
tests/cooking/apr_2/: apr_2.c
tests/cooking/dekker/: dekker-fences.cc  dekker.c
tests/cooking/dekker2/: dekker2.c  expected.rc11.in  expected.wrc11.in
tests/cooking/lamport/: lamport_n.c
tests/cooking/scull/: scull.c
tests/cooking/undecl-extfun/: genmc.imm.wb.in
tests/correct/2+2W+3sc+rel1/: 2+2w+3sc+rel1.c
tests/correct/2+2W+3sc+rel2/: 2+2w+3sc+rel2.c
tests/correct/2+2W+4sc/: 2+2w+4sc.c
tests/correct/2CoWR/: 2cowr.c
tests/correct/CoA/: args.wb.in
tests/correct/CoRR/: corr.c
tests/correct/CoRR0/: corr0.c
tests/correct/CoWR/: cowr.c
tests/correct/IRIW-acq-sc/: IRIW-acq-sc.c
tests/correct/JLT/: jlt.c
tests/correct/MP+incMP/: MP+incMP.c
tests/correct/MP+relf+acqf/: mp+relf+acqf.c
tests/correct/S/: s.c
tests/specs/: locks_mo.in  sc_mo.in  sc_wb.in
(+1723 files in other folders)
