# where to install the headers on the system
genmcdir = $(pkgincludedir)

# the list of header files that belong to the library
nobase_genmc_HEADERS = \
  assert.h \
  atomic \
  bits/stat.h \
  cassert \
  errno.h \
  fcntl.h \
  genmc.h \
  genmc_internal.h \
  lkmm.h \
  pthread.h \
  stdatomic.h \
  stdio.h \
  stdlib.h \
  sys/stat.h \
  sys/types.h \
  thread \
  threads.h \
  unistd.h
